Changelog
=========

1.2b1 (2014-06-12)
------------------

- Upgrade MediaElement.js to 2.14.2.
  [davidjb]
- Remove extraneous files from MediaElement.js distribution.
  [davidjb]
- Add collective.cover tile
  [zombified]


1.1 (2014-04-25)
----------------

- add open graph data
  [vangheem]

1.0b2 (2014-03-05)
------------------

- fix convert video
  [vangheem]

- Fix minor typo in available views for audio/video types. This previously
  prevented saving type settings via the control panel.
  [davidjb] 


1.0b1 (2014-02-15)
------------------

- implement primary field
  [vangheem]


1.0a3 (2014-02-14)
------------------

- handle no preview image being set
  [vangheem]

- fix video type definition
  [vangheem]


1.0a2 (2014-01-29)
------------------

- Add widget that supports streaming partial ranges of video content
  from video and audio fields. This package now supports video seeking
  in Chrome and iOS video display with content-range request support. 
  [davidjb]
- Configure CSS to apply prefix to local resources utilised for
  MediaElement.js. Previously, images used in CSS did not load
  when running outside of debug mode.
  [davidjb]
- Upgrade MediaElement.js to 2.13.2.
  [davidjb]
- Switch to using ``plone.autoform`` for form directives rather
  than the old location in ``plone.directives.form``.
  [davidjb]
- Omit ogv and webm video fields from add and edit forms; allows access to
  field contents from main video view.
  [davidjb]
- Fix video display <source> URLs to point to correct fields. Previously,
  all links referred to the main MP4 video field.
  [davidjb]


1.0a1 (2013-12-18)
------------------

- Initial release